# keep-account

./: .gitignore  README.md  云同步多端记账软件_MVP_PRD.md
deploy/: Dockerfile.backend  Dockerfile.frontend  config.yaml  deploy.sh  docker-compose.yml  nginx.conf
deploy/Issue/mini1/: ios.sh
deploy/env/: _template.yaml
docs/: CHANGELOG.md  hz-agents-guide.md  project.md  tasks.md
docs/1-account-system/: log.md  plan.md  tasks.md
docs/1-account-system/backend/: design.md  tasks.md
docs/1-account-system/qa/: design.md  (+1 more)
docs/2-quick-bookkeeping/: log.md  plan.md  tasks.md
docs/3-transaction-list/: log.md  plan.md  tasks.md
docs/4-data-reports/: log.md  plan.md  tasks.md
docs/5-cloud-sync/: log.md  plan.md  tasks.md
docs/6-multi-platform/: log.md  plan.md  tasks.md
docs/7-deploy-process/: log.md  plan.md  tasks.md
docs/8-server-info-display/: log.md  plan.md  tasks.md
docs/fixes/: 1-ios应用启动闪退-productname中文字符导致.md  10-ios安全区布局错位.md  11-tabbar底部空白-safe-area布局重构.md  12-tauriadapter丢失query参数.md  13-ios-safe-area-背景色不一致.md  2-ios登录页异常滚动和底部空白.md  3-ios输入框聚焦时页面自动缩放.md  4-ios刘海遮挡toast通知条.md  5-ios-dev模式登录请求body丢失导致eof.md  6-添加gin请求日志中间件.md  7-ios登录post-body丢失.md  8-cors拦截所有非5173端口请求.md  9-多端请求后端失败及网页跨域.md  log.md
server/: config.yaml  go.mod  go.sum
web/: .env.development  .env.mini1  .env.production  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src-tauri/: .xcode.env  Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
(+139 files in other folders)
