[package]
name = "keep-account"
version = "0.1.0"
description = "记账本桌面应用"
edition = "2021"

[lib]
name = "keep_account_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
